[knewfilemenu] Show inline warning when creating items with leading or trailing spaces

Summary:
This is a somewhat unusual thing for a user to do intentionally, so let's show a
warning to make sure they're aware that they're doing it.

BUG: 421075
FIXED-IN: 5.71

Test Plan:
{F8289470, size=full}
{F8289471, size=full}

Reviewers: #frameworks, #vdg, cfeck, cblack

Reviewed By: #vdg, cblack

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D29483